<resources>
    <string name="app_name">upes</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="create_accounts">Create Account</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="or_login_with">Or Login With</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="password">Password</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="email_address">Email Address</string>
    <string name="hello_again_you_ve_been_missed">Hello again you’ve been missed!</string>
    <string name="hi_welcome_back">Hi, Welcome Back!</string>
    <string name="connect_with_your_friends_today">Connect with your friends today!</string>
    <string name="email_addresss">Email Address</string>
    <string name="enter_your_emails">Enter your email</string>
    <string name="mobile_phone">Mobile Phone</string>
    <string name="enter_your_mobile_number">Enter your mobile number</string>
    <string name="passwords">Password</string>
    <string name="enter_your_passwords">Enter your password</string>
    <string name="i_agree_to_the_terms_and_conditions">I agree to the terms and conditions</string>
    <string name="sign_ups">Sign Up</string>
    <string name="or_sign_up_with">Or Sign Up With</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="logins">Login</string>
    <string name="add_your_address">Add Your Address</string>
    <string name="let_s_connect_the_dots_share_your_location_with_us_to_tailor_our_solar_solutions_to_your_doorstep">Let\'s connect the dots! Share your location with us to tailor our solar solutions to your doorstep.</string>
    <string name="first_line_of_address">First Line of Address</string>
    <string name="second_line_of_address">Second Line of Address</string>
    <string name="enter_your_address">Enter your address</string>
    <string name="city">City</string>
    <string name="enter_your_city">Enter your city</string>
    <string name="type_of_location">Type of Location</string>
    <string name="work_home">Work/Home</string>
    <string name="let_s_go">Let\'s Go</string>
    <string name="select_the_language">Select the language</string>
    <string name="select_language">Select Language</string>
    <string name="english">English</string>
    <string name="hindi">Hindi</string>
    <string name="gamify_your_cyber_defense_journey">Gamify Your Cyber Defense Journey</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_your_confirm_password">Enter your confirm password</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="enter_your_age">Enter your age</string>
    <string name="enter_your_gender">Enter your gender</string>
    <string name="gender">Gender</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="didn_t_receive_code_resend">Didn’t receive code? Resend</string>
    <string name="resend">Resend</string>
    <string name="didn_t_receive_code">Didn’t receive code?</string>
    <string name="what_is_your_level">What is your level ?</string>
    <string name="choose_from_the_list_below">Choose from the list below</string>
    <string name="do_you_have_any_prior_knowledge">Do you have any prior knowledge ?</string>
    <string name="yes_i_have_prior_knowledge">Yes , I have Prior Knowledge</string>
    <string name="no_i_am_a_absolute_beginner">No , I am a absolute beginner</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="what_skills_do_you_have">What Skills do you have ?</string>
    <string name="phishing">Phishing</string>
    <string name="social_engineering">Social Engineering</string>
    <string name="malware">Malware</string>
    <string name="assessment">Assessment</string>
    <string name="let_s_check_your_knowledge">Let\'s check your knowledge!</string>
    <string name="submit">Submit</string>
    <string name="q1_what_is_the_primary_target_of_phishing_attack">Q1.What is the primary target of phishing attack?</string>
    <string name="q1_what_is_the_primary_target_of_phishing_attacks">Q1. What is the primary target of phishing attacks?</string>
    <string name="q2_what_is_one_comman_tectic_used_in_phishing_scams_to_deceive_victims">Q2. What is one comman tectic used in phishing scams to deceive victims?</string>
    <string name="q3_what_phishing_method_focuses_on_ceos_or_executives_by_mimicing_legitimate_emails">Q3. What phishing method focuses on CEOs or executives by mimicing legitimate emails?</string>
</resources>