<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingStart="32dp"
    android:paddingTop="32dp"
    android:paddingEnd="32dp"
    android:scrollbars="none"
    tools:context=".presentation.screens.authentication.signup.signup">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/back_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/create_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/add_your_address"
            android:textColor="@color/black"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/back_img" />

        <TextView
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/let_s_connect_the_dots_share_your_location_with_us_to_tailor_our_solar_solutions_to_your_doorstep"
            android:textColor="@color/blue"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/create_account" />

        <TextView
            android:id="@+id/first_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/first_line_of_address"
            android:textColor="@color/black"
            android:textSize="14.5sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/first_container"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/enter_your_email"
            android:textColorHint="@color/grey"
            app:boxStrokeColor="@color/blue"
            app:boxStrokeWidth="1dp"
            app:hintTextColor="@color/blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/first_address">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/first_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_regular"
                android:inputType="text"
                android:textColor="@color/blue" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/second_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/second_line_of_address"
            android:textColor="@color/black"
            android:textSize="14.5sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/first_container" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/second_container"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/enter_your_address"
            android:textColorHint="@color/grey"
            app:boxStrokeColor="@color/blue"
            app:boxStrokeWidth="1dp"
            app:hintTextColor="@color/blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/second_address">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/second_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_regular"
                android:inputType="text"
                android:textColor="@color/blue" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/locationtxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/type_of_location"
            android:textColor="@color/black"
            android:textSize="14.5sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/second_container" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/location_container"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/work_home"
            android:textColorHint="@color/grey"
            app:boxStrokeColor="@color/blue"
            app:boxStrokeWidth="1dp"
            app:hintTextColor="@color/blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/locationtxt">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_regular"
                android:inputType="text"
                android:textColor="@color/blue" />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/letsgo_btn"
            style="@style/Widget.Material3.Button.Icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:backgroundTint="@color/blue"
            android:text="@string/let_s_go"
            android:textColor="@color/white"
            android:fontFamily="@font/montserrat_bold"
            app:cornerRadius="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/location_container" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
