<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <TextView
        android:id="@+id/lang_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/select_the_language"
        android:textAlignment="center"
        android:textColor="@color/primary_txt"
        android:textSize="32sp"
        android:layout_marginBottom="128dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/English"
        style="@style/Widget.Material3.Button.Icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:backgroundTint="@color/primary"
        android:text="@string/english"
        app:cornerRadius="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textColor="@color/primary_txt"
        android:fontFamily="@font/montserrat_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lang_txt" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/hindi"
        style="@style/Widget.Material3.Button.Icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/primary"
        android:text="@string/hindi"
        app:cornerRadius="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textColor="@color/primary_txt"
        android:fontFamily="@font/montserrat_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/English" />


</androidx.constraintlayout.widget.ConstraintLayout>