<?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    android:scrollbars="none"
    tools:context=".presentation.screens.authentication.signup.signup">

        <TextView
            android:id="@+id/create_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/create_accounts"
            android:textColor="@color/primary"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/gamify_your_cyber_defense_journey"
            android:textColor="@color/primary_txt"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/create_account" />


        <LinearLayout
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text">

            <View
                android:id="@+id/view1"
                android:layout_width="wrap_content"
                android:layout_height="8dp"
                android:layout_marginEnd="12dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_corner_view"
                app:layout_constraintEnd_toStartOf="@id/view2"
                app:layout_constraintStart_toStartOf="parent" />

            <View
                android:id="@+id/view2"
                android:layout_width="wrap_content"
                android:layout_height="8dp"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_corner_view"
                app:layout_constraintEnd_toStartOf="@id/view3"
                app:layout_constraintStart_toEndOf="@id/view1" />

            <View
                android:id="@+id/view3"
                android:layout_width="wrap_content"
                android:layout_height="8dp"
                android:layout_marginStart="12dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_corner_view_main"
                app:layout_constraintStart_toEndOf="@id/view2" />


        </LinearLayout>
    <TextView
        android:id="@+id/leveltxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/do_you_have_any_prior_knowledge"
        android:textColor="@color/primary"
        android:textSize="14.5sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/Yes"
        style="@style/Widget.Material3.Button.Icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:backgroundTint="@color/hint"
        android:text="@string/yes_i_have_prior_knowledge"
        app:cornerRadius="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textColor="@color/background"
        android:fontFamily="@font/montserrat_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/leveltxt" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/no"
        style="@style/Widget.Material3.Button.Icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/hint"
        android:text="@string/no_i_am_a_absolute_beginner"
        app:cornerRadius="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textColor="@color/background"
        android:fontFamily="@font/montserrat_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Yes" />



</androidx.constraintlayout.widget.ConstraintLayout>

